[project]
name = "mt681-sml-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi==2023.5.7",
    "prometheus-client==0.17.1",
    "pyserial==3.5",
    "python-dateutil==2.8.2",
    "reactivex==4.0.4",
    "rich>=13.9.4",
    "six==1.16.0",
    "smllib==1.2",
    "typing-extensions==4.7.1",
    "urllib3==2.0.3",
]
